# dotfiles

fs/: .zshrc
fs/.config/: alacritty  niri  nvim
fs/.config/niri/: config.kdl
fs/.config/nvim/: init.lua  lazy-lock.json
fs/.config/nvim/lua/: opts.lua  statusline.lua  vars.lua
fs/.config/nvim/lua/plugins/: gruvbox-theme.lua  lsp.lua  mason.lua  misc.lua
fs/.config/swaylock/: config  config_OLD
fs/.config/waybar/: config  style.css
fs/etc/: pacman.conf
fs/home/: .dotfilesignore  .gitconfig  .gitconfig.tpl  .zshrc  .zshrc.tpl
fs/home/.config/: .dotfilesignore
fs/home/.config/Code/User/: settings.json
fs/home/.config/alacritty/: alacritty.toml  alacritty.toml.tpl
fs/home/.config/eww/: .dotfilesignore  bar_center.yuck  bar_left.yuck  bar_right.yuck  colors.scss  eww.scss  eww.yuck  reset.sh
fs/home/.config/eww/rust-scripts/: Cargo.toml
fs/home/.config/eww/rust-scripts/battery_info/: Cargo.toml
fs/home/.config/eww/rust-scripts/eww/: Cargo.toml
fs/home/.config/eww/rust-scripts/niri_workspaces/: Cargo.toml
fs/home/.config/eww/rust-scripts/niri_workspaces/src/: external_state.rs  internal_state.rs  main.rs
fs/home/.config/fuzzel/: fuzzel.ini
fs/home/.config/hypr/: hyprlock.conf  hyprpaper.conf
fs/home/.config/niri/: config.kdl  config.kdl.tpl
fs/home/.config/nushell/: history.txt
fs/home/.config/nvim/: init.lua  lazy-lock.json
fs/home/.config/nvim/lua/: fns.lua  keys.lua
fs/home/.config/waybar/: config  style.css
fs/home/.scripts/: quickscope.sh  uuid-generator.sh
sync/: Cargo.toml
sync/src/: main.rs
(+30 files in other folders)
