[package]
name = "niri_workspaces"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
eyre = "0.6.12"
# TODO: Update to 25.8 (prob) when next release is released, also maybe stop building niri from source...
niri-ipc = { rev = "a62b38790e2c353f87f562050815c7b8cbc3c30c", git = "https://github.com/YaLTeR/niri"} # "25.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
